--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -98,7 +98,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/tvRegisTempatLahir"
+                android:id="@+id/tvRegisTempat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -114,10 +114,10 @@
                 android:layout_height="wrap_content"
                 android:textColorHint="#B9B8B8"
                 android:layout_marginVertical="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvRegisTempatLahir">
+                app:layout_constraintTop_toBottomOf="@+id/tvRegisTempat">
 
                 <EditText
-                    android:id="@+id/RegisTempatLahir"
+                    android:id="@+id/RegisTempat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
@@ -125,12 +125,12 @@
                     android:inputType="text"
                     android:text=""
                     android:textSize="20sp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvRegisTempatLahir" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvRegisTempat" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/tvRegisTanggalLahir"
+                android:id="@+id/tvRegisTanggal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -146,10 +146,10 @@
                 android:layout_height="wrap_content"
                 android:textColorHint="#B9B8B8"
                 android:layout_marginVertical="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvRegisTanggalLahir">
+                app:layout_constraintTop_toBottomOf="@+id/tvRegisTanggal">
 
                 <EditText
-                    android:id="@+id/RegisTanggalLahir"
+                    android:id="@+id/RegisTanggal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
@@ -160,7 +160,7 @@
                     android:focusable="false"
                     android:text=""
                     android:textSize="20sp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvRegisTanggalLahir" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvRegisTanggal" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
