--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,8 +10,20 @@
         android:id="@+id/image1"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:src="@drawable/profile" />
+
+    <TextView
+        android:id="@+id/setFoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="280dp"
+        android:layout_marginVertical="130dp"
+        android:drawableStart="@drawable/baseline_photo_camera_24"
+        android:text=""
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvNama"
@@ -126,7 +138,7 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/btn_exit"
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="100dp"
